* Mark non-autoconfirmed users in RC * Avoid overselecting fields in RC and add $fields to SpecialRecentChangesQuery * Some whitespace tweaks in RecentChange.php. Remove dead code. * Avoid rc_new check in ChangesList * Move some "unpatrolled" CSS to shared.css. Add 'newuser' CSS. * Bump style version

--- a/skins/common/oldshared.css
+++ b/skins/common/oldshared.css
@@ -212,6 +212,10 @@ span.unpatrolled {
 	font-weight:bold;
 	color:red;
 }
+span.newuser {
+	font-weight:bold;
+	color:orange;
+}
 
 span.updatedmarker {
 	color:black;
